# pixeltable

./: .gitignore  .gitmodules  .markdownlint.json  .markdownlint.yaml  .readthedocs.yaml  404.html  AGENTS.md  CLAUDE.md  CODEBASE_INDEX.md  CONTRIBUTING.md  DOCS_V2_COMPLETE.md  DOCUMENTATION_GAPS.md  FABRIC_INTEGRATION_SUMMARY.md  LICENSE  Makefile  Makefile.MK  OPENROUTER_INTEGRATION_SUMMARY.md  OPENROUTER_QUICKSTART.md  OTEL_PLAN.md  PIXELTABLE_CHEATSHEET.md  PIXELTABLE_CHEATSHEET.mdx  README.md  _demo_populate.py  _demo_udfs.py  _doc_demo.py  _pipeline_demo.py  _pipeline_udfs.py  _scale_demo.py  _start_dashboard.py  email-sequence.md  hatch_build.py  history_demo.ipynb  hookswap.md  index.html  mkdocs.yml  mypy.ini  netlify.toml  objects.inv  otel_demo.py  package-lock.json  (+17 more)
.claude/: CODEBASE_INDEX.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
.github/: CODEOWNERS  copilot-instructions.md
api/: data_frame.md~
api-cheat-sheet/: index.html
api_cheat_sheet/: api_cheat_sheet.md  index.html
config/: index.html
dashboard/: .gitignore  ARCHITECTURE.md  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
demo/: Create YoloV7 UDF.ipynb  Demo.ipynb  Load Imagenette.ipynb  Load Videos.ipynb  YoloV7 Object Tracking.ipynb  sort_track.py
differences-with-pandas/: index.html
differences_with_pandas/: index.html
docs/: api-cheat-sheet.md  api_cheat_sheet.md  differences-with-pandas.md  getting-started.md  migration-testing-guide.md  openrouter_integration.md  public_api.opml
docs/sample-apps/context-aware-discord-bot/: .env.example  .env_template  README.md  bot.py  config.py  functions.py  message_formatter.py  pyproject.toml  requirements.txt  setup_pixeltable.py
docs/sample-apps/intelligence-hub/: .env.example  .gitignore  README.md  config.py  functions.py  ingest.py  pyproject.toml  sample_sources.csv  setup_pixeltable.py
docs/sample-apps/intelligence-hub/custom_udfs/: discord.py  google_sheets.py  slack.py  telegram.py  webhook.py
docs/sample-apps/jfk-files-mcp-server/: .env.example  .gitignore  Dockerfile  README.md  config.py  initialize.py  load_data.py  pyproject.toml  requirements.txt  schema.py  server.py  tools.py
docs/sample-apps/multimodal-chat/backend/: Dockerfile  README.md  config.py  functions.py  pyproject.toml  requirements.txt  setup_pixeltable.py
docs/sample-apps/multimodal-chat/backend/api/: main.py  routes.py  settings.py
docs/sample-apps/prompt-engineering-studio-gradio-application/: README.md  pixeltable-and-gradio-application.ipynb  pyproject.toml
docs/sample-apps/reddit-agentic-bot/: .env.example  .gitignore  README.md  config.py  functions.py  pyproject.toml  reddit_bot.py  requirements.txt  setup_pixeltable.py
docs/sample-apps/reddit-agentic-bot/content/: pixeltable_readme.md
docs/sample-apps/text-and-image-similarity-search-nextjs-fastapi/: README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt  schema.py
docs/sample-apps/text-and-image-similarity-search-nextjs-fastapi/backend/: app.py  requirements.txt
docs/sample-apps/text-and-image-similarity-search-nextjs-fastapi/backend/test/: api-tests-local.http
docs/sample-apps/text-and-image-similarity-search-nextjs-fastapi/frontend/: package-lock.json  package.json  tailwind.config.ts
docs/sample-apps/text-and-image-similarity-search-nextjs-fastapi/frontend/src/app/: globals.css  layout.tsx  page.tsx
docs/sample-apps/text-and-image-similarity-search-nextjs-fastapi/frontend/src/hooks/: VideoSearch.ts
docs/sample-apps/text-and-image-similarity-search-nextjs-fastapi/frontend/src/lib/: api.ts
docs/sample-apps/text-and-image-similarity-search-nextjs-fastapi/routers/: search.py
docs2/: .gitignore  README.md  build.js  index.html  mint.json  netlify.toml  package-lock.json  package.json
docs3/: .gitignore  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
examples/: openrouter_example.py  telemetry_full_demo.py  tutorials
fundamentals/: tables-and-data-operations.ipynb
getting-started/: getting-started.md  index.html
howto/: embedding-indexes.ipynb  udfs-in-pixeltable.ipynb  working-with-external-files.ipynb
od-training-demo/: od-training-demo.ipynb  schema.py
overview/: index.html
pcli/: _paths.py  models.py  probe.py  pxt-cli-design.md
pixeltable/: __init__.py  __version__.py  _explain.py  _query.py  catalog.py  cli.py  client.py  config.py  constants.py  dataframe.py  env.py  exceptions.py  exceptions2.py  exec-old.py  exec.py  exprs.py  function.py  globals.py  hook_schemas.py  hooks.py  index.py  plan.py  query_clauses.py  remote_decorator.py  row.py  runtime.py  serve.py  store.py  telemetry.py  telemetry_schemas.py  tf.py  type_system.py  types.py
pixeltable_cli/: models.py  utils.py
pxt_cli/: models.py  probe.py  utils.py
scripts/: analyze-changed-files.sh  benchmark-slack-report.sh  black-changed-files.sh  check-notebooks.sh  dir_ops.py  drop-pxt-db.sh  filecache_multiprocess_stress.py  format-changed-files.sh  format-notebooks.sh  generate_typescript_sdk.py  lint-changed-files.sh  lint-notebooks.sh  mkdocs.sh  notebooks-markdown.sh  postgres.sh  prepare-nb-tests.sh  release.sh  retry.sh  run-isolated-nb-tests.sh  run-random-ops.sh  run-random-tbl-ops.sh  set-up-ci-credentials.sh  setup_ci_credentials.sh  start-cockroach-ci.sh  stress-tests.sh  update_codebase_index.sh  verify-sample-apps-deep.sh  verify-sample-apps.sh
search/: search_index.json
test_yolox/: README.md  test_yolox.py
tests/: conftest.py  coordinator.py  example_mcp_server.py  fault_injection.py  module_with_duplicate_udf.py  module_with_future_annotations.py  notebook-test.ipynb  script_with_udf.py  setup_postgres_test.py  start_local_server.py  test_alter_column.py  test_array.py  test_array_type.py  test_audio.py  test_catalog.py  test_cli.py  test_cli_e2e.sh  test_client.py  test_component_view.py  test_concurrent.py  test_config.py  test_dataframe.py  test_db_backend_bench.py  test_dbms.py  test_destination.py  test_dirs.py  test_env.py  (+52 more)
(+2715 files in other folders)
