[project]
name = "context-aware-discord-bot"
version = "0.1.0"
description = "Discord bot with incremental RAG powered by Pixeltable"
requires-python = ">=3.10"
dependencies = [
    "pixeltable>=0.6.0",
    "discord.py>=2.0",
    "openai>=1.0",
    "python-dotenv",
    "sentence-transformers",
    "spacy",
]
