[project]
name = "backend"
version = "0.1.0"
description = "backend service for multimodal chat"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.11",
    "fastapi[standard]>=0.115.6",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "mistune>=3.0.2",
    "numpy>=1.26.4",
    "openai>=1.58.1",
    "openai-whisper>=20240930",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "passlib>=1.7.4",
    "pip>=24.3.1",
    "pixeltable>=0.2.28",
    "pydantic>=2.10.3",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "sentence-transformers>=3.3.1",
    "setuptools>=75.6.0",
    "spacy>=3.8.3",
    "starlette>=0.41.3",
    "tiktoken>=0.8.0",
    "torch>=2.5.1",
    "transformers>=4.47.1",
    "uvicorn>=0.34.0",
    "validators>=0.34.0",
    "wheel>=0.45.1",
]
